Package_Tools/include-C/gmp/gmp.h

typedef unsigned int		mp_limb_t;
typedef unsigned long long int	mp_limb_t;
typedef unsigned long int	mp_limb_t;
typedef unsigned long int	mp_bitcnt_t;
typedef int			mp_size_t;
typedef long int		mp_size_t;
/* Types for function declarations in gmp files.  */
/* ??? Should not pollute user name space with these ??? */
typedef const __mpz_struct *mpz_srcptr;
typedef __mpz_struct *mpz_ptr;
/**************** Integer (i.e. Z) routines.  ****************/

extern void *_mpz_realloc (mpz_ptr, mp_size_t);
extern void mpz_abs (mpz_ptr, mpz_srcptr);
extern void mpz_add (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_add_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_addmul (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_addmul_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_and (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_array_init (mpz_ptr, mp_size_t, mp_size_t);
extern void mpz_bin_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_bin_uiui (mpz_ptr, unsigned long int, unsigned long int);
extern void mpz_cdiv_q (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_cdiv_q_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern unsigned long int mpz_cdiv_q_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_cdiv_qr (mpz_ptr, mpz_ptr, mpz_srcptr, mpz_srcptr);
extern unsigned long int mpz_cdiv_qr_ui (mpz_ptr, mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_cdiv_r (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_cdiv_r_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern unsigned long int mpz_cdiv_r_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern unsigned long int mpz_cdiv_ui (mpz_srcptr, unsigned long int) ;
extern void mpz_clear (mpz_ptr);
extern void mpz_clears (mpz_ptr, ...);
extern void mpz_clrbit (mpz_ptr, mp_bitcnt_t);
extern int mpz_cmp (mpz_srcptr, mpz_srcptr)  ;
extern int mpz_cmp_d (mpz_srcptr, double) ;
extern int _mpz_cmp_si (mpz_srcptr, signed long int)  ;
extern int _mpz_cmp_ui (mpz_srcptr, unsigned long int)  ;
extern int mpz_cmpabs (mpz_srcptr, mpz_srcptr)  ;
extern int mpz_cmpabs_d (mpz_srcptr, double) ;
extern int mpz_cmpabs_ui (mpz_srcptr, unsigned long int)  ;
extern void mpz_com (mpz_ptr, mpz_srcptr);
extern void mpz_combit (mpz_ptr, mp_bitcnt_t);
extern int mpz_congruent_p (mpz_srcptr, mpz_srcptr, mpz_srcptr) ;
extern int mpz_congruent_2exp_p (mpz_srcptr, mpz_srcptr, mp_bitcnt_t)  ;
extern int mpz_congruent_ui_p (mpz_srcptr, unsigned long, unsigned long) ;
extern void mpz_divexact (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_divexact_ui (mpz_ptr, mpz_srcptr, unsigned long);
extern int mpz_divisible_p (mpz_srcptr, mpz_srcptr) ;
extern int mpz_divisible_ui_p (mpz_srcptr, unsigned long) ;
extern int mpz_divisible_2exp_p (mpz_srcptr, mp_bitcnt_t)  ;
extern void mpz_dump (mpz_srcptr);
extern void *mpz_export (void *, size_t *, int, size_t, int, size_t, mpz_srcptr);
extern void mpz_fac_ui (mpz_ptr, unsigned long int);
extern void mpz_2fac_ui (mpz_ptr, unsigned long int);
extern void mpz_mfac_uiui (mpz_ptr, unsigned long int, unsigned long int);
extern void mpz_primorial_ui (mpz_ptr, unsigned long int);
extern void mpz_fdiv_q (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_fdiv_q_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern unsigned long int mpz_fdiv_q_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_fdiv_qr (mpz_ptr, mpz_ptr, mpz_srcptr, mpz_srcptr);
extern unsigned long int mpz_fdiv_qr_ui (mpz_ptr, mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_fdiv_r (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_fdiv_r_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern unsigned long int mpz_fdiv_r_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern unsigned long int mpz_fdiv_ui (mpz_srcptr, unsigned long int) ;
extern void mpz_fib_ui (mpz_ptr, unsigned long int);
extern void mpz_fib2_ui (mpz_ptr, mpz_ptr, unsigned long int);
extern int mpz_fits_sint_p (mpz_srcptr)  ;
extern int mpz_fits_slong_p (mpz_srcptr)  ;
extern int mpz_fits_sshort_p (mpz_srcptr)  ;
extern int mpz_fits_uint_p (mpz_srcptr)  ;
extern int mpz_fits_ulong_p (mpz_srcptr)  ;
extern int mpz_fits_ushort_p (mpz_srcptr)  ;
extern void mpz_gcd (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern unsigned long int mpz_gcd_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_gcdext (mpz_ptr, mpz_ptr, mpz_ptr, mpz_srcptr, mpz_srcptr);
extern double mpz_get_d (mpz_srcptr) ;
extern double mpz_get_d_2exp (signed long int *, mpz_srcptr);
extern /* signed */ long int mpz_get_si (mpz_srcptr)  ;
extern char *mpz_get_str (char *, int, mpz_srcptr);
extern unsigned long int mpz_get_ui (mpz_srcptr)  ;
extern mp_limb_t mpz_getlimbn (mpz_srcptr, mp_size_t)  ;
extern mp_bitcnt_t mpz_hamdist (mpz_srcptr, mpz_srcptr)  ;
extern void mpz_import (mpz_ptr, size_t, int, size_t, int, size_t, const void *);
extern void mpz_init (mpz_ptr) ;
extern void mpz_init2 (mpz_ptr, mp_bitcnt_t);
extern void mpz_inits (mpz_ptr, ...) ;
extern void mpz_init_set (mpz_ptr, mpz_srcptr);
extern void mpz_init_set_d (mpz_ptr, double);
extern void mpz_init_set_si (mpz_ptr, signed long int);
extern int mpz_init_set_str (mpz_ptr, const char *, int);
extern void mpz_init_set_ui (mpz_ptr, unsigned long int);
extern size_t mpz_inp_raw (mpz_ptr, FILE *);
extern size_t mpz_inp_str (mpz_ptr, FILE *, int);
extern int mpz_invert (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_ior (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern int mpz_jacobi (mpz_srcptr, mpz_srcptr) ;
extern int mpz_kronecker_si (mpz_srcptr, long) ;
extern int mpz_kronecker_ui (mpz_srcptr, unsigned long) ;
extern int mpz_si_kronecker (long, mpz_srcptr) ;
extern int mpz_ui_kronecker (unsigned long, mpz_srcptr) ;
extern void mpz_lcm (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_lcm_ui (mpz_ptr, mpz_srcptr, unsigned long);
extern void mpz_lucnum_ui (mpz_ptr, unsigned long int);
extern void mpz_lucnum2_ui (mpz_ptr, mpz_ptr, unsigned long int);
extern int mpz_millerrabin (mpz_srcptr, int) ;
extern void mpz_mod (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_mul (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_mul_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern void mpz_mul_si (mpz_ptr, mpz_srcptr, long int);
extern void mpz_mul_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_neg (mpz_ptr, mpz_srcptr);
extern void mpz_nextprime (mpz_ptr, mpz_srcptr);
extern int mpz_prevprime (mpz_ptr, mpz_srcptr);
extern size_t mpz_out_raw (FILE *, mpz_srcptr);
extern size_t mpz_out_str (FILE *, int, mpz_srcptr);
extern int mpz_perfect_power_p (mpz_srcptr) ;
extern int mpz_perfect_square_p (mpz_srcptr) ;
extern mp_bitcnt_t mpz_popcount (mpz_srcptr)  ;
extern void mpz_pow_ui (mpz_ptr, mpz_srcptr, unsigned long int);