Packages_2024/gmp_6.3.0/fp_gmp.pas


{*************** Integer (i.e. Z) routines.  *************** }
function _mpz_realloc(para1: Pmpz; para2: Tmp_size_t): pointer; cdecl; external libgmp name '__g_mpz_realloc';
procedure mpz_abs(para1: Pmpz; para2: Pmpz); cdecl; external libgmp name '__gmpz_abs';
procedure mpz_add(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_add';
procedure mpz_add_ui(para1: Pmpz; para2: Pmpz; para3: Tculong); cdecl; external libgmp name '__gmpz_add_ui';
procedure mpz_addmul(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_addmul';
procedure mpz_addmul_ui(para1: Pmpz; para2: Pmpz; para3: Tculong); cdecl; external libgmp name '__gmpz_addmul_ui';
procedure mpz_and(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_and';
procedure mpz_array_init(para1: Pmpz; para2: Tmp_size_t; para3: Tmp_size_t); cdecl; external libgmp name '__gmpz_array_init';
procedure mpz_bin_ui(para1: Pmpz; para2: Pmpz; para3: Tculong); cdecl; external libgmp name '__gmpz_bin_ui';
procedure mpz_bin_uiui(para1: Pmpz; para2: Tculong; para3: Tculong); cdecl; external libgmp name '__gmpz_bin_uiui';
procedure mpz_cdiv_q(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_cdiv_q';
procedure mpz_cdiv_q_2exp(para1: Pmpz; para2: Pmpz; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_cdiv_q_2exp';
function mpz_cdiv_q_ui(para1: Pmpz; para2: Pmpz; para3: Tculong): Tculong; cdecl; external libgmp name '__gmpz_cdiv_q_ui';
procedure mpz_cdiv_qr(para1: Pmpz; para2: Pmpz; para3: Pmpz; para4: Pmpz); cdecl; external libgmp name '__gmpz_cdiv_qr';
function mpz_cdiv_qr_ui(para1: Pmpz; para2: Pmpz; para3: Pmpz; para4: Tculong): Tculong; cdecl; external libgmp name '__gmpz_cdiv_qr_ui';
procedure mpz_cdiv_r(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_cdiv_r';
procedure mpz_cdiv_r_2exp(para1: Pmpz; para2: Pmpz; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_cdiv_r_2exp';
function mpz_cdiv_r_ui(para1: Pmpz; para2: Pmpz; para3: Tculong): Tculong; cdecl; external libgmp name '__gmpz_cdiv_r_ui';
function mpz_cdiv_ui(para1: Pmpz; para2: Tculong): Tculong; cdecl; external libgmp name '__gmpz_cdiv_ui';
procedure mpz_clear(para1: Pmpz); cdecl; external libgmp name '__gmpz_clear';
procedure mpz_clears(para1: Pmpz); varargs; cdecl; external libgmp name '__gmpz_clears';
procedure mpz_clrbit(para1: Pmpz; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_clrbit';
function mpz_cmp(para1: Pmpz; para2: Pmpz): longint; cdecl; external libgmp name '__gmpz_cmp';
function mpz_cmp_d(para1: Pmpz; para2: double): longint; cdecl; external libgmp name '__gmpz_cmp_d';
function _mpz_cmp_si(para1: Pmpz; para2: Tclong): longint; cdecl; external libgmp name '__gmpz_cmp_si';
function _mpz_cmp_ui(para1: Pmpz; para2: Tculong): longint; cdecl; external libgmp name '__gmpz_cmp_ui';
function mpz_cmpabs(para1: Pmpz; para2: Pmpz): longint; cdecl; external libgmp name '__gmpz_cmpabs';
function mpz_cmpabs_d(para1: Pmpz; para2: double): longint; cdecl; external libgmp name '__gmpz_cmpabs_d';
function mpz_cmpabs_ui(para1: Pmpz; para2: Tculong): longint; cdecl; external libgmp name '__gmpz_cmpabs_ui';
procedure mpz_com(para1: Pmpz; para2: Pmpz); cdecl; external libgmp name '__gmpz_com';
procedure mpz_combit(para1: Pmpz; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_combit';
function mpz_congruent_p(para1: Pmpz; para2: Pmpz; para3: Pmpz): longint; cdecl; external libgmp name '__gmpz_congruent_p';
function mpz_congruent_2exp_p(para1: Pmpz; para2: Pmpz; para3: Tmp_bitcnt_t): longint; cdecl; external libgmp name '__gmpz_congruent_2exp_p';
function mpz_congruent_ui_p(para1: Pmpz; para2: Tculong; para3: Tculong): longint; cdecl; external libgmp name '__gmpz_congruent_ui_p';
procedure mpz_divexact(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_divexact';
procedure mpz_divexact_ui(para1: Pmpz; para2: Pmpz; para3: Tculong); cdecl; external libgmp name '__gmpz_divexact_ui';
function mpz_divisible_p(para1: Pmpz; para2: Pmpz): longint; cdecl; external libgmp name '__gmpz_divisible_p';
function mpz_divisible_ui_p(para1: Pmpz; para2: dword): Tculong; cdecl; external libgmp name '__gmpz_divisible_ui_p';
function mpz_divisible_2exp_p(para1: Pmpz; para2: Tmp_bitcnt_t): longint; cdecl; external libgmp name '__gmpz_divisible_2exp_p';
procedure mpz_dump(para1: Pmpz); cdecl; external libgmp name '__gmpz_dump';
function mpz_export(para1: pointer; para2: Psize_t; para3: longint; para4: Tsize_t; para5: longint; para6: Tsize_t; para7: Pmpz): pointer; cdecl; external libgmp name '__gmpz_export';
procedure mpz_fac_ui(para1: Pmpz; para2: Tculong); cdecl; external libgmp name '__gmpz_fac_ui';
procedure mpz_2fac_ui(para1: Pmpz; para2: Tculong); cdecl; external libgmp name '__gmpz_2fac_ui';
procedure mpz_mfac_uiui(para1: Pmpz; para2: Tculong; para3: Tculong); cdecl; external libgmp name '__gmpz_mfac_uiui';
procedure mpz_primorial_ui(para1: Pmpz; para2: Tculong); cdecl; external libgmp name '__gmpz_primorial_ui';
procedure mpz_fdiv_q(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_fdiv_q';
procedure mpz_fdiv_q_2exp(para1: Pmpz; para2: Pmpz; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_fdiv_q_2exp';
function mpz_fdiv_q_ui(para1: Pmpz; para2: Pmpz; para3: Tculong): Tculong; cdecl; external libgmp name '__gmpz_fdiv_q_ui';
procedure mpz_fdiv_qr(para1: Pmpz; para2: Pmpz; para3: Pmpz; para4: Pmpz); cdecl; external libgmp name '__gmpz_fdiv_qr';
function mpz_fdiv_qr_ui(para1: Pmpz; para2: Pmpz; para3: Pmpz; para4: Tculong): Tculong; cdecl; external libgmp name '__gmpz_fdiv_qr_ui';
procedure mpz_fdiv_r(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_fdiv_r';
procedure mpz_fdiv_r_2exp(para1: Pmpz; para2: Pmpz; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_fdiv_r_2exp';
function mpz_fdiv_r_ui(para1: Pmpz; para2: Pmpz; para3: Tculong): Tculong; cdecl; external libgmp name '__gmpz_fdiv_r_ui';
function mpz_fdiv_ui(para1: Pmpz; para2: Tculong): Tculong; cdecl; external libgmp name '__gmpz_fdiv_ui';
procedure mpz_fib_ui(para1: Pmpz; para2: Tculong); cdecl; external libgmp name '__gmpz_fib_ui';
procedure mpz_fib2_ui(para1: Pmpz; para2: Pmpz; Tculong: dword); cdecl; external libgmp name '__gmpz_fib2_ui';
function mpz_fits_sint_p(para1: Pmpz): longint; cdecl; external libgmp name '__gmpz_fits_sint_p';
function mpz_fits_slong_p(para1: Pmpz): longint; cdecl; external libgmp name '__gmpz_fits_slong_p';
function mpz_fits_sshort_p(para1: Pmpz): longint; cdecl; external libgmp name '__gmpz_fits_sshort_p';
function mpz_fits_uint_p(para1: Pmpz): longint; cdecl; external libgmp name '__gmpz_fits_uint_p';
function mpz_fits_ulong_p(para1: Pmpz): longint; cdecl; external libgmp name '__gmpz_fits_ulong_p';
function mpz_fits_ushort_p(para1: Pmpz): longint; cdecl; external libgmp name '__gmpz_fits_ushort_p';
procedure mpz_gcd(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_gcd';
function mpz_gcd_ui(para1: Pmpz; para2: Pmpz; para3: Tculong): Tculong; cdecl; external libgmp name '__gmpz_gcd_ui';
procedure mpz_gcdext(para1: Pmpz; para2: Pmpz; para3: Pmpz; para4: Pmpz; para5: Pmpz); cdecl; external libgmp name '__gmpz_gcdext';
function mpz_get_d(para1: Pmpz): double; cdecl; external libgmp name '__gmpz_get_d';
function mpz_get_d_2exp(para1: Pculong; para2: Pmpz): double; cdecl; external libgmp name '__gmpz_get_d_2exp';
function mpz_get_si(para1: Pmpz): Tclong; cdecl; external libgmp name '__gmpz_get_si';
function mpz_get_str(para1: pchar; para2: longint; para3: Pmpz): pchar; cdecl; external libgmp name '__gmpz_get_str';
function mpz_get_ui(para1: Pmpz): Tculong; cdecl; external libgmp name '__gmpz_get_ui';
function mpz_getlimbn(para1: Pmpz; para2: Tmp_size_t): Tmp_limb_t; cdecl; external libgmp name '__gmpz_getlimbn';
function mpz_hamdist(para1: Pmpz; para2: Pmpz): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpz_hamdist';
procedure mpz_import(para1: Pmpz; para2: Tsize_t; para3: longint; para4: Tsize_t; para5: longint; para6: Tsize_t; para7: pointer); cdecl; external libgmp name '__gmpz_import';
procedure mpz_init(para1: Pmpz); cdecl; external libgmp name '__gmpz_init';
procedure mpz_init2(para1: Pmpz; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_init2';
procedure mpz_inits(para1: Pmpz); varargs; cdecl; external libgmp name '__gmpz_inits';
procedure mpz_init_set(para1: Pmpz; para2: Pmpz); cdecl; external libgmp name '__gmpz_init_set';
procedure mpz_init_set_d(para1: Pmpz; para2: double); cdecl; external libgmp name '__gmpz_init_set_d';
procedure mpz_init_set_si(para1: Pmpz; para2: Tclong); cdecl; external libgmp name '__gmpz_init_set_si';
function mpz_init_set_str(para1: Pmpz; para2: pchar; para3: longint): longint; cdecl; external libgmp name '__gmpz_init_set_str';
procedure mpz_init_set_ui(para1: Pmpz; para2: Tculong); cdecl; external libgmp name '__gmpz_init_set_ui';
function mpz_inp_raw(para1: Pmpz; para2: PFILE): Tsize_t; cdecl; external libgmp name '__gmpz_inp_raw';
function mpz_inp_str(para1: Pmpz; para2: PFILE; para3: longint): Tsize_t; cdecl; external libgmp name '__gmpz_inp_str';
function mpz_invert(para1: Pmpz; para2: Pmpz; para3: Pmpz): longint; cdecl; external libgmp name '__gmpz_invert';
procedure mpz_ior(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_ior';
function mpz_jacobi(para1: Pmpz; para2: Pmpz): longint; cdecl; external libgmp name '__gmpz_jacobi';
function mpz_kronecker_si(para1: Pmpz; para2: Tclong): longint; cdecl; external libgmp name '__gmpz_kronecker_si';
function mpz_kronecker_ui(para1: Pmpz; para2: Tculong): longint; cdecl; external libgmp name '__gmpz_kronecker_ui';
function mpz_si_kronecker(para1: Tclong; para2: Pmpz): longint; cdecl; external libgmp name '__gmpz_si_kronecker';
function mpz_ui_kronecker(para1: Tculong; para2: Pmpz): longint; cdecl; external libgmp name '__gmpz_ui_kronecker';
procedure mpz_lcm(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_lcm';
procedure mpz_lcm_ui(para1: Pmpz; para2: Pmpz; para3: Tculong); cdecl; external libgmp name '__gmpz_lcm_ui';
procedure mpz_lucnum_ui(para1: Pmpz; para2: Tculong); cdecl; external libgmp name '__gmpz_lucnum_ui';
procedure mpz_lucnum2_ui(para1: Pmpz; para2: Pmpz; para3: Tculong); cdecl; external libgmp name '__gmpz_lucnum2_ui';
function mpz_millerrabin(para1: Pmpz; para2: longint): longint; cdecl; external libgmp name '__gmpz_millerrabin';
procedure mpz_mod(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_mod';
procedure mpz_mul(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_mul';
procedure mpz_mul_2exp(para1: Pmpz; para2: Pmpz; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_mul_2exp';
procedure mpz_mul_si(para1: Pmpz; para2: Pmpz; para3: Tclong); cdecl; external libgmp name '__gmpz_mul_si';
procedure mpz_mul_ui(para1: Pmpz; para2: Pmpz; para3: Tculong); cdecl; external libgmp name '__gmpz_mul_ui';
procedure mpz_neg(para1: Pmpz; para2: Pmpz); cdecl; external libgmp name '__gmpz_neg';
procedure mpz_nextprime(para1: Pmpz; para2: Pmpz); cdecl; external libgmp name '__gmpz_nextprime';
function mpz_prevprime(para1: Pmpz; para2: Pmpz): longint; cdecl; external libgmp name '__gmpz_prevprime';
function mpz_out_raw(para1: PFILE; para2: Pmpz): Tsize_t; cdecl; external libgmp name '__gmpz_out_raw';
function mpz_out_str(para1: PFILE; para2: longint; para3: Pmpz): Tsize_t; cdecl; external libgmp name '__gmpz_out_str';
function mpz_perfect_power_p(para1: Pmpz): longint; cdecl; external libgmp name '__gmpz_perfect_power_p';
function mpz_perfect_square_p(para1: Pmpz): longint; cdecl; external libgmp name '__gmpz_perfect_square_p';
function mpz_popcount(para1: Pmpz): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpz_popcount';
procedure mpz_pow_ui(para1: Pmpz; para2: Pmpz; para3: Tculong); cdecl; external libgmp name '__gmpz_pow_ui';
